create Domain-Template from domain
VEO-1028

Create Domain-Template from domain via rest endpoint. Secured for
'content-creator' role. Update license. Increase revision when called.
Add auth test. Add com.fasterxml.uuid  generator to generate v5 named
uuids.